changed src of images

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <div class="gallery__container">
       <div class="gallery__thumbnails">
         <div class="thumbnails__main">
-          <img class="thumbnails__img" src="/img/01.jpg" alt="Image">
+          <img class="thumbnails__img" src="img/01.jpg" alt="Image">
         </div>
         <div class="thumbnails__list">
           <div href="#" class="thumbnails__item">
-            <img src="/img/02.jpg" alt="" class="thumbnails__img">
+            <img src="img/02.jpg" alt="" class="thumbnails__img">
           </div>
           <div href="#" class="thumbnails__item">
-            <img src="/img/03.jpg" alt="" class="thumbnails__img">
+            <img src="img/03.jpg" alt="" class="thumbnails__img">
           </div>
           <div href="#" class="thumbnails__item">
-            <img src="/img/04.jpg" alt="" class="thumbnails__img">
+            <img src="img/04.jpg" alt="" class="thumbnails__img">
           </div>
           <div href="#" class="thumbnails__item">
-            <img src="/img/05.jpg" alt="" class="thumbnails__img">
+            <img src="img/05.jpg" alt="" class="thumbnails__img">
           </div>
           <div href="#" class="thumbnails__item">
-            <img src="/img/06.jpg" alt="" class="thumbnails__img">
+            <img src="img/06.jpg" alt="" class="thumbnails__img">
           </div>
           <div href="#" class="thumbnails__item">
-            <img src="/img/07.jpg" alt="" class="thumbnails__img">
+            <img src="img/07.jpg" alt="" class="thumbnails__img">
           </div>
         </div>
       </div>
