--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gsap image flip</title>
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <section class="gallery">
@@ -40,6 +40,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/Flip.min.js"></script>
 
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
