--- a/index.html
+++ b/index.html
@@ -14,29 +14,28 @@
           <img class="thumbnails__img" src="img/01.jpg" alt="Image">
         </div>
         <div class="thumbnails__list">
-          <div href="#" class="thumbnails__item">
+          <div  class="thumbnails__item">
             <img src="img/02.jpg" alt="" class="thumbnails__img">
           </div>
-          <div href="#" class="thumbnails__item">
+          <div  class="thumbnails__item">
             <img src="img/03.jpg" alt="" class="thumbnails__img">
           </div>
-          <div href="#" class="thumbnails__item">
+          <div  class="thumbnails__item">
             <img src="img/04.jpg" alt="" class="thumbnails__img">
           </div>
-          <div href="#" class="thumbnails__item">
+          <div  class="thumbnails__item">
             <img src="img/05.jpg" alt="" class="thumbnails__img">
           </div>
-          <div href="#" class="thumbnails__item">
+          <div  class="thumbnails__item">
             <img src="img/06.jpg" alt="" class="thumbnails__img">
           </div>
-          <div href="#" class="thumbnails__item">
+          <div class="thumbnails__item">
             <img src="img/07.jpg" alt="" class="thumbnails__img">
           </div>
         </div>
       </div>
     </div>
   </section>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/Flip.min.js"></script>
 
